removed isBlank() calls again to make project compatible with Java 8